trade companies + history

--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -197,3 +197,9 @@
  upacayan_company:0 "Upacayan Company"
  TRADE_COMPANY_UPACAYAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Upacaya Company"
  TRADE_COMPANY_UPACAYAN_Trade_Company:0 "Upacayan Trade Company"
+ raykaani_company:0 "Raykaani Company"
+ TRADE_COMPANY_RAYKAANI_Root_Culture_GetName:0 "[Root.Culture.GetName] Raykaamar Company"
+ TRADE_COMPANY_RAYKAANI_Trade_Company:0 "Raykaani Trade Company"
+ nragan_company:0 "Nragan Company"
+ TRADE_COMPANY_NRAGAN_Root_Culture_GetName:0 "[Root.Culture.GetName] Liajnragana Company"
+ TRADE_COMPANY_NRAGAN_Trade_Company:0 "Nragan Trade Company"
