--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -187,3 +187,21 @@
  salia_waldrodung_desc:0 "When Saelius conquered these lands they were covered in a dense and almost untraversable forests. The process of deforestation started with the arrival of Saelian colonists and continues to this day."
  salia_embrace_the_nordmarker_model:0 "Embrace the Nordmarker Model"
  salia_embrace_the_nordmarker_model_desc:0 "Nordmarker model of military focuses on high drill and discipline of the infantry, but we also adapt it to allow us to use our elite cavalry."
+
+ felderia_ideas:0 "Felder Ideas"
+ felderia_ideas_bonus:0 "Felder Ambition"
+ felderia_ideas_start:0 "Felder Traditions"
+ felderia_zbojaner_integration:0 "Zbojaner Integration"
+ felderia_zbojaner_integration_desc:0 "Zbojaner people are not only known for their resilience, but also their disdain for outsiders. If we show them that our cultures are bonded together, it will benefit both of us."
+ felderia_advanced_forest_exploitation:0 "Advanced Forest Exploitation"
+ felderia_advanced_forest_exploitation_desc:0 "In the past our people cut down most of the dense forest that was growing in these regions in order to make place for new farmlands. Now we are more considerate and exploit the forest in a much more efficient manner, planting it back if the soil is too barren."
+ felderia_renaissance:0 "Felder Renaissance"
+ felderia_renaissance_desc:0 "Renaissace in these parts is heavily inspired by Capirian architecture. Using their fortresses and castles as inspiration, many local innovations quickly arose."
+ felderia_forest_navigation:0 "Forest Navigation"
+ felderia_forest_navigation_desc:0 "Forests of Bogiland are much more dense than the Felder ones, making it hard for most people to find a way through them. This seemingly bad situation gives us a great tactical advantages over our foes."
+ felderia_integration_of_the_kaposnicy:0 "Integration of Kaposnicy"
+ felderia_integration_of_the_kaposnicy_desc:0 "Kaposnicy were an elite Bogilish cavalry regiment which focused on mobility and sustained damage. Their strength is undeniable and it would be a waste for such a great concept to be abandoned."
+ felderia_absolute_centralisation:0 "Absolute Centralisation"
+ felderia_absolute_centralisation_desc:0 "Small Bogilish lords were always a menace for anyone trying to control these lands. If we want to survive, we need to crack down on their privileges to show them who is really in charge of this nation."
+ felderia_royal_munition_manufactories:0 "Royal Munition Manufactories"
+ felderia_royal_munition_manufactories_desc:0 "Thanks to the large copper, sulfur and salt deposits in these areas we were able to secure large-scale munition manufactories which proved to be greatly beneficial in the development of siege and battle cannons."
