--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -447,6 +447,11 @@
  nrunga:0 "Nrunga"
  dab:0 "Dab"
  nramna:0 "Nramna"
+
+ west_gajifeng_group:0 "Pasmangalan"
+ hoxoan:0 "Hoxoan"
+ raykaani:0 "Raykaani"
+ pyaari:0 "Pyaari"
  
  cak_kecig_group:0 "Cak'kecig"
  bhariew:0 "Bhariew"
