--- a/localisation/TD_ages_l_english.yml
+++ b/localisation/TD_ages_l_english.yml
@@ -9,7 +9,10 @@
  obj_ahead_tech_desc:0 "Be Ahead of time in any technology."
  TD_ab_self_sustainable_colonies:0 "Self-sustainable Colonies"
  TD_ab_self_sustainable_colonies_tt:0 "Has 'Self-sustainable Colonies' unlocked"
-
+ TD_ab_dau_tran_thanda:0 "Dau Tran Thanda"
+ TD_ab_dau_tran_thanda_tt:0 "Has 'Dau Trahn Thanda' unlocked"
+ TD_ab_sunrise_highway:0 "Sunrise Highway"
+ TD_ab_sunrise_highway_tt:0 "Has 'Sunrise Highway' unlocked"
 
  age_of_reformation_short:0 "Reformation"
  age_of_reformation:0 "Age of Reformation"
