--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1194,3 +1194,5 @@
  SDH_ADJ:0 "Sur'dmbag Hakli"
  KRT:0 "Kae'rm Taratam"
  KRT_ADJ:0 "Kae'rm Taratami"
+ BKS:0 "Bkuslcuht"
+ BKS_ADJ:0 "Bkuslcuhtan"
