sea provinces FINALE

--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -56,8 +56,8 @@
  agellard_region:0 "Agellardia"
  fiddatan_region:0 "Fiddatan"
  radoriasa_region:0 "Radoriasa"
- pisachaian_ocean_region:0 "Pisachaian Ocean"
- southern_niheyan_ocean:0 "Southen Niheyan Ocean"
+ northern_pisachaian_ocean_region:0 "Northern Pisachaian Ocean"
+ southern_niheyan_ocean:0 "Southern Niheyan Ocean"
  coicemhar_region:0 "Coicemhar"
  upper_moorfluss_region:0 "Upper Moorfluss"
  blawenn_region:0 "Blawenn"
@@ -71,7 +71,7 @@
  weixiao_region:0 "Weixiao"
  zimahei_valley_region:0 "Zimahei Valley"
  greater_heisean_region:0 "Greater Heisean"
- sahilan_coast_ocean:0 "Sahilan Coast"
+ west_sahilan_coast_ocean:0 "West Sahilan Coast"
  eastern_chantlian_coast_ocean:0 "Northeastern Amin Ocean"
  dasenli_region:0 "Dasenli"
  east_pemenian_coast_ocean:0 "East Pemenian Coast"
