--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -43,6 +43,20 @@
  marstonian_ideas:0 "Marstonian Ideas"
  marstonian_ideas_start:0 "Marstonian Traditions"
  marstonian_ideas_bonus:0 "Marstonian Ambition"
+ marstonian_unification:0 "Marstonian Unification"
+ marstonian_unification_desc:0 "Our unity came at a cost of our brave men fighting for their heritage. Some local rulers were opposed to unification, but now we can build a new Marstonia, not divided between illegitimate valdnieks, but under one Karalis."
+ MARSTONIA_mezizstrade_upgraded:0 "Mežizstrade"
+ MARSTONIA_mezizstrade_upgraded_desc:0 "Just like Bogilish dukes and Silvestrian burghers, in order to increase our economic output we need to expand into the wild and unexploited forests to make space for our farms, factories and people."
+ marstonia_coast_protection:0 "Coast Protection"
+ marstonia_coast_protection_desc:0 "We are surrounded by naval powers from all sides just waiting to prey on us and access through Mezonian Straits. In order to protect our interest, we need to fight fire with fire and invest into a glorious navy."
+ marstonia_cooperation_with_drotaci:0 "Cooperation with the Drotaci"
+ marstonia_cooperation_with_drotaci_desc:0 "Ever since the marstonian statehood emerged, the relations between the nobility and the court were very cordial and both groups often supported each other. Even in these prosperous times we can trust our nobility."
+ marstonian_lex_dura_manu:0 "Dura Manu Lex"
+ marstonian_lex_dura_manu_desc:0 "But just because they are loyal doesn't mean they should be a powerful force in the nation. Compared to older systems, Dura Manu law was supposed to distance the monarch from the nobility decreasing his over-reliance on levies."
+ marstonian_conscription_system:0 "Localized Conscription System"
+ marstonian_conscription_system_desc:0 "Inspired by the western standard of conscription, our system tries to improve and adapt it to our nation. The majority of it is managed by noble bureaucrats in rural areas and by the crown in urban areas."
+ marstonia_expand_the_royal_academy:0 "Expanded Royal Academy"
+ marstonia_expand_the_royal_academy_desc:0 "Royal Academy of Karavija was founded in 1642, but was later greatly expanded in order to accomodate the large amounts of potential recruits wishing to become a higher ranking officers. Many great minds taught at this academy, some of them even coming from as far as Acerb."
  
  
  
