--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -2,3 +2,6 @@
  restore_gmitar_title:0 "Restore Gmitar"
  restore_gmitar_desc:0 "Ancient City of Gmitar has fallen to the Bunelisuli horde many years ago. Now that the dust has settled, we will resettle this important trading post."
  unlock_kakigian_frontier_reform_tt:0 "Unlock the government reform §YKakigian Frontier§!."
+ WAPETYAH:0 "Wapetyah"
+ wapetya_sapsy_reform:0 "Wapetya Sapsy"
+ wapetya_sapsy_reform_desc:0 "Hestani rulers are seen as messengers of Gods who rule these lands in their name, later to ascend to godhood themselves."
