--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -20,6 +20,20 @@
  ahnoyasi_ideas:0 "Ahnoyasi Ideas"
  ahnoyasi_ideas_start:0 "Ahnoyasi Traditions"
  ahnoyasi_ideas_bonus:0 "Ahnoyasi Ambition"
+ ahnoyas_fravasumi_trade:0 "Fravasumi Trade"
+ ahnoyas_fravasumi_trade_desc:0 "Due to the increased piracy in the Maqitan Sea, most of the long distance merchants generally avoid it and instead try to use the route through Barzakhan. This allows us to tax anyone trying to reach these parts, even if we don't directly control them."
+ ahonyas_royal_asamanacs:0 "Royal Asamanacs"
+ ahonyas_royal_asamanacs_desc:0 "The elite cavalrymen of Asamanacs are composed of rich nobles who can afford the best horses, armor and training necessary to protect our nusabate. This traditions stems even as far back as ancient Visparaya, but it had a great resurgence during the Varazahani period."
+ ahnoyas_guns_and_cannons:0 "Guns and Cannons"
+ ahnoyas_guns_and_cannons_desc:0 "Our military leaders adopted the gunpowder warfare quite early, even compared to the taedians. First cannons were used in XV century in wars against Ayanihat and later mounted onto the ships to fight against piracy. This brought a great deal of experience in dealing with this technology."
+ ahnoyas_western_influence:0 "Western Influence"
+ ahnoyas_western_influence_desc:0 "After the fall of Varazahani nusabate, most of the court and heritage remained in Azhishan. The late empire was greatly influenced by pamkusean and chilverchian arts and architecture, which can still be seen to this day while walking on the streets of our capital."
+ ahnoyas_the_silk_trade:0 "The Silk Trade"
+ ahnoyas_the_silk_trade_desc:0 "The Dashavi silk magnates are still quite powerful around the Fravasumi Bay. Thankfully, many of our merchants maintain good relations with them and we can benefit from it even if we don't control the production centers thanks to the rights of long distance distribution."
+ ahnoyas_closed_court:0 "Closed Court"
+ ahnoyas_closed_court_desc:0 "Many lessons were learned after the fall of Varazahan, one of which is to never trust outsiders. After nusabat Shahrzad was assassinated, many kings became paranoid and made their court increasingly elite and exclusiveto protect themselves and their interest."
+ ahnoyas_varazan_legacy:0 "Varazan Legacy"
+ ahnoyas_varazan_legacy_desc:0 "Despite hundreds of years passing from the fall of Varazahan, it still lives on in our memories. Poets and artists are constantly inspired by its influence, Dashavi rulers still maintain the old ways of administration and many still reference this region by its old name. Many wish to claim the title of Varazahan, but we are the most worthy successors."
 
  frasatahi_ideas:0 "Frasatahi Ideas"
  frasatahi_ideas_start:0 "Frasatahi Traditions"
