--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -16,3 +16,9 @@
  merc_eisenburg_company:0 "Eisenburg Company"
  merc_virgilian_guard:0 "§JVirgilian Guard§!"
  merc_falkenband:0 "Falkenband"
+
+ merc_asaband:0 "Asaband"
+ merc_western_guns:0 "Western Guns"
+ merc_talaansheng:0 "Talaansheng"
+ merc_yautsing_company:0 "Yautsing Company"
+ merc_bryncaff_clan:0 "Bryncaff Clan"
