Hindi-based prov names
Part 1 of naming not-indian provinces.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3506,19 +3506,19 @@
  PROV3505:0 "3505"
  PROV3506:0 "3506"
  PROV3507:0 "3507"
- PROV3508:0 "3508"
+ PROV3508:0 "Jadagara"
  PROV3509:0 "3509"
- PROV3510:0 "3510"
- PROV3511:0 "3511"
- PROV3512:0 "3512"
- PROV3513:0 "3513"
+ PROV3510:0 "Brakipanha"
+ PROV3511:0 "Makahena"
+ PROV3512:0 "Strkiha"
+ PROV3513:0 "Phadetasa"
  PROV3514:0 "3514"
- PROV3515:0 "3515"
- PROV3516:0 "3516"
- PROV3517:0 "3517"
+ PROV3515:0 "Jangari"
+ PROV3516:0 "Pagakanra"
+ PROV3517:0 "Gatauna"
  PROV3518:0 "3518"
  PROV3519:0 "3519"
- PROV3520:0 "3520"
+ PROV3520:0 "Kathsrpa"
  PROV3521:0 "3521"
  PROV3522:0 "3522"
  PROV3523:0 "3523"
@@ -3674,21 +3674,21 @@
  PROV3673:0 "3673"
  PROV3674:0 "3674"
  PROV3675:0 "3675"
- PROV3676:0 "3676"
+ PROV3676:0 "Adhikespa"
  PROV3677:0 "3677"
  PROV3678:0 "3678"
  PROV3679:0 "3679"
- PROV3680:0 "3680"
+ PROV3680:0 "Chkahasa"
  PROV3681:0 "3681"
  PROV3682:0 "3682"
  PROV3683:0 "3683"
  PROV3684:0 "3684"
  PROV3685:0 "3685"
- PROV3686:0 "3686"
- PROV3687:0 "3687"
- PROV3688:0 "3688"
- PROV3689:0 "3689"
- PROV3690:0 "3690"
+ PROV3686:0 "Vyjertya"
+ PROV3687:0 "Balcgyat"
+ PROV3688:0 "Larghapenat"
+ PROV3689:0 "Gudenapa"
+ PROV3690:0 "Chaghamega"
  PROV3691:0 "3691"
  PROV3692:0 "3692"
  PROV3693:0 "3693"
@@ -3727,9 +3727,9 @@
  PROV3726:0 "3726"
  PROV3727:0 "3727"
  PROV3728:0 "3728"
- PROV3729:0 "3729"
- PROV3730:0 "3730"
- PROV3731:0 "3731"
+ PROV3729:0 "Bhrikta"
+ PROV3730:0 "Pradespa"
+ PROV3731:0 "Kamarpas"
  PROV3732:0 "3732"
  PROV3733:0 "3733"
  PROV3734:0 "3734"
@@ -3738,61 +3738,61 @@
  PROV3737:0 "3737"
  PROV3738:0 "3738"
  PROV3739:0 "3739"
- PROV3740:0 "3740"
- PROV3741:0 "3741"
- PROV3742:0 "3742"
- PROV3743:0 "3743"
- PROV3744:0 "3744"
- PROV3745:0 "3745"
+ PROV3740:0 "Komati"
+ PROV3741:0 "Manaspa"
+ PROV3742:0 "Dimati"
+ PROV3743:0 "Daramita"
+ PROV3744:0 "Jangksia"
+ PROV3745:0 "Barchsi"
  PROV3746:0 "3746"
- PROV3747:0 "3747"
- PROV3748:0 "3748"
- PROV3749:0 "3749"
+ PROV3747:0 "Dipati"
+ PROV3748:0 "Sanaspa"
+ PROV3749:0 "Vithisi"
  PROV3750:0 "3750"
- PROV3751:0 "3751"
+ PROV3751:0 "Jipsanha"
  PROV3752:0 "3752"
- PROV3753:0 "3753"
+ PROV3753:0 "Vastapsa"
  PROV3754:0 "3754"
  PROV3755:0 "3755"
- PROV3756:0 "3756"
- PROV3757:0 "3757"
- PROV3758:0 "3758"
+ PROV3756:0 "Rankaspa"
+ PROV3757:0 "Raganreha"
+ PROV3758:0 "Jangrvi"
  PROV3759:0 "3759"
- PROV3760:0 "3760"
+ PROV3760:0 "Bhojervi"
  PROV3761:0 "3761"
- PROV3762:0 "3762"
- PROV3763:0 "3763"
- PROV3764:0 "3764"
- PROV3765:0 "3765"
+ PROV3762:0 "Khejat"
+ PROV3763:0 "Sabhgedya"
+ PROV3764:0 "Kutinesat"
+ PROV3765:0 "Bratgtya"
  PROV3766:0 "3766"
- PROV3767:0 "3767"
+ PROV3767:0 "Dhenriya"
  PROV3768:0 "3768"
- PROV3769:0 "3769"
+ PROV3769:0 "Purasya"
  PROV3770:0 "3770"
  PROV3771:0 "3771"
- PROV3772:0 "3772"
+ PROV3772:0 "Bnihdya"
  PROV3773:0 "3773"
- PROV3774:0 "3774"
+ PROV3774:0 "Phandisa"
  PROV3775:0 "3775"
  PROV3776:0 "3776"
- PROV3777:0 "3777"
+ PROV3777:0 "Nitimedya"
  PROV3778:0 "3778"
- PROV3779:0 "3779"
- PROV3780:0 "3780"
+ PROV3779:0 "Bolahesa"
+ PROV3780:0 "Phamesa"
  PROV3781:0 "3781"
- PROV3782:0 "3782"
+ PROV3782:0 "Megadya"
  PROV3783:0 "3783"
- PROV3784:0 "3784"
+ PROV3784:0 "Bhainagya"
  PROV3785:0 "3785"
  PROV3786:0 "3786"
- PROV3787:0 "3787"
+ PROV3787:0 "Nirdaha"
  PROV3788:0 "3788"
  PROV3789:0 "3789"
- PROV3790:0 "3790"
+ PROV3790:0 "Gsambya"
  PROV3791:0 "3791"
  PROV3792:0 "3792"
  PROV3793:0 "3793"
- PROV3794:0 "3794"
+ PROV3794:0 "Abugrehat"
  PROV3795:0 "3795"
  PROV3796:0 "3796"
  PROV3797:0 "3797"
