--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1196,3 +1196,28 @@
  KRT_ADJ:0 "Kae'rm Taratami"
  BKS:0 "Bkuslcuht"
  BKS_ADJ:0 "Bkuslcuhtan"
+
+ ATU:0 "Atusaq"
+ ATU_ADJ:0 "Atusaqi"
+ MLI:0 "Maralim"
+ MLI_ADJ:0 "Marali"
+ PKT:0 "Puktiaw"
+ PKT_ADJ:0 "Puktiawi"
+ SIM:0 "Simazua"
+ SIM_ADJ:0 "Simazuanese"
+ DAX:0 "Daxedusa"
+ DAX_ADJ:0 "Daxedusian"
+ KKY:0 "Kakay"
+ KKY_ADJ:0 "Kakayese"
+ YOW:0 "Yowun"
+ YOW_ADJ:0 "Yowunese"
+ DRU:0 "Druikom"
+ DRU_ADJ:0 "Druikomi"
+ KWT:0 "Kwithir"
+ KWT_ADJ:0 "Kwithi"
+ KPS:0 "Kupsuy"
+ KPS_ADJ:0 "Kupsuyese"
+ SHC:0 "Sahircun"
+ SHC_ADJ:0 "Sahircuni"
+ KRM:0 "Karmesan"
+ KRM_ADJ:0 "Karmesani"
