--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -423,3 +423,11 @@
  bjateel_animism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
  bjateel_animism_rebels_army:0 "$RELIGION$ Army"
  bjateel_animism_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+ pitriy:0 "Pitriy"
+ pitriy_religion_desc:0 "locals"
+ pitriy_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ pitriy_rebels_title:0 "Religious"
+ pitriy_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ pitriy_rebels_army:0 "$RELIGION$ Army"
+ pitriy_rebels_demand:0 "Convert $COUNTRYNAME$"
