Bengali prov names
Part 2 of naming not-indian provinces.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3494,10 +3494,10 @@
  PROV3493:0 "3493"
  PROV3494:0 "3494"
  PROV3495:0 "3495"
- PROV3496:0 "3496"
+ PROV3496:0 "Pumgara"
  PROV3497:0 "3497"
  PROV3498:0 "3498"
- PROV3499:0 "3499"
+ PROV3499:0 "Sonyochama"
  PROV3500:0 "3500"
  PROV3501:0 "3501"
  PROV3502:0 "3502"
@@ -3563,7 +3563,7 @@
  PROV3562:0 "3562"
  PROV3563:0 "3563"
  PROV3564:0 "3564"
- PROV3565:0 "3565"
+ PROV3565:0 "Gabhmata"
  PROV3566:0 "3566"
  PROV3567:0 "3567"
  PROV3568:0 "3568"
@@ -3650,37 +3650,37 @@
  PROV3649:0 "3649"
  PROV3650:0 "3650"
  PROV3651:0 "3651"
- PROV3652:0 "3652"
+ PROV3652:0 "Khrota"
  PROV3653:0 "3653"
  PROV3654:0 "3654"
  PROV3655:0 "3655"
- PROV3656:0 "3656"
- PROV3657:0 "3657"
- PROV3658:0 "3658"
- PROV3659:0 "3659"
- PROV3660:0 "3660"
- PROV3661:0 "3661"
- PROV3662:0 "3662"
- PROV3663:0 "3663"
+ PROV3656:0 "Bitalata"
+ PROV3657:0 "Niatlaga"
+ PROV3658:0 "Bijama"
+ PROV3659:0 "Asaphbala"
+ PROV3660:0 "Bijarba"
+ PROV3661:0 "Ekamala"
+ PROV3662:0 "Bhoda"
+ PROV3663:0 "Goridhota"
  PROV3664:0 "3664"
- PROV3665:0 "3665"
+ PROV3665:0 "Durghlatama"
  PROV3666:0 "3666"
  PROV3667:0 "3667"
  PROV3668:0 "3668"
  PROV3669:0 "3669"
- PROV3670:0 "3670"
- PROV3671:0 "3671"
- PROV3672:0 "3672"
- PROV3673:0 "3673"
+ PROV3670:0 "Ksamalata"
+ PROV3671:0 "Daboama"
+ PROV3672:0 "Atatama"
+ PROV3673:0 "Ragtama"
  PROV3674:0 "3674"
- PROV3675:0 "3675"
+ PROV3675:0 "Pakmala"
  PROV3676:0 "Adhikespa"
  PROV3677:0 "3677"
  PROV3678:0 "3678"
- PROV3679:0 "3679"
+ PROV3679:0 "Sogitala"
  PROV3680:0 "Chkahasa"
- PROV3681:0 "3681"
- PROV3682:0 "3682"
+ PROV3681:0 "Chagamala"
+ PROV3682:0 "Tagharuma"
  PROV3683:0 "3683"
  PROV3684:0 "3684"
  PROV3685:0 "3685"
