--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -38,6 +38,20 @@
  frasatahi_ideas:0 "Frasatahi Ideas"
  frasatahi_ideas_start:0 "Frasatahi Traditions"
  frasatahi_ideas_bonus:0 "Frasatahi Ambition"
+ frasatah_qawartian_subjugation:0 "Qawartian Subjugation"
+ frasatah_qawartian_subjugation_desc:0 "We subjugated the Aroshas cities in order to strengthen our access to the valuable incense market, greatly upsetting ambitious nation of Qawart. This led to a long war in which we proved to be victorious. Many Sunbati people weren't so happy with our occupation, but granting them significant autonomy quickly silenced them."
+ frasatah_rising_nusabate:0 "Rising Nusabate"
+ frasatah_rising_nusabate_desc:0 "In the XIV century, our nation controlled merely half of the Raxasamah forest. Now, after many struggles, strategic subjugations and alliances we managed to rise to the top and become a true hegemon in the Anjafrah"
+ frasatah_forests_of_raxasamah:0 "Forests of Raxasamah"
+ frasatah_forests_of_raxasamah_desc:0 "Raxasa has much greater population density than the rest of Visparaya thanks to its unique climate. Forests of our homeland bring not only valuable wood for shipmaking, but also olives, pomegranates and dates."
+ frasatah_anjafrahan_trade:0 "Anjafrahan Trade"
+ frasatah_anjafrahan_trade_desc:0 "Lake Hestan is a dense network of interconnected cities, hubs and merchants all working to earn as much profit as possible. Anjafrah, its southern part, is predominately dominated by Fravasumi, Warilasi, Raxasam and Aroshas merchants, most of which need to go through our ports."
+ frasatah_harsh_terrain_experts:0 "Harsh Terrain Experts"
+ frasatah_harsh_terrain_experts_desc:0 "Qawartia, while not as fertise as Raxasamah, still hides many secret and treasures waiting for someone to find them. Nusabat Farrukhzad was the first one to encourage expansion and construction of new coastal settlements in Parum and often encourages local rulers to help in this endeavour."
+ frasatah_strategic_control:0 "Strategic Control"
+ frasatah_strategic_control_desc:0 "While easily defendable from the south, our homeland can be quickly overrun from west and east by the use of cavalry. In order to prevent that, Large chains of forts were constructed and remain useful to this very day."
+ frasatah_new_world_marketplace:0 "New World's Marketplace"
+ frasatah_new_world_marketplace_desc:0 "Our influence on the world's economy is undeniable. We control Hestani incense and naval supplies markets and most of the commerce goes through our merchants. We sustain economies of many countries in the region - there is not a single nation which would dare to fight us."
 
  visparayan_ideas:0 "Visparayan Ideas"
  visparayan_ideas_start:0 "Visparayan Traditions"
