--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -44,7 +44,7 @@
  tarhia_tradenode:0 "Lower Tarhia"
  thiccet_tradenode:0 "Thiccet"
  qarasam_tradenode:0 "Qarasam"
- frasatah_tradenode:0 "Frasatah"
+ frasatah_tradenode:0 "Anjafrah"
  qubrayia_tradenode:0 "Qubrayia"
  ehwitraw_tradenode:0 "Ehwitraw"
  mewitasr_tradenode:0 "Mewitasr"
