--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -9,7 +9,7 @@
  LOADING_TIP_7:0 "Tetrarchy is responsible for electing the next ruler of Sigilian church, but with each year their power over the emperor grows."
  LOADING_TIP_8:0 "Brianola is a peasant republic, but with a dynastical dictatorship in charge"
  LOADING_TIP_9:0 "Geniburgh Company is a group of mercenaries which served in the Zakarturi lands - until they grew strong enough to establish their own state."
- LOADING_TIP_10:0 "Tonatitlani people established their empire following the VIII century collapsed caused by mass epidemics and famine."
+ LOADING_TIP_10:0 "Tonatitlani people established their empire following the VIII century collapse caused by mass epidemics and famine."
  LOADING_TIP_11:0 "Rouvia was once a powerful tribal entity but was slowly colonized and conquered by Capiran and Aqerbic states."
  LOADING_TIP_12:0 "Aevadata of Varazanah conquered the Pamkusean peninsula in the XIV century, forcing the local population into exile." 
  LOADING_TIP_13:0 "Apaxtaros is the name of a Rah Jadid state which embraced the Pamkusean culture in the begining of the XVI century."
