--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -466,7 +466,7 @@
  patovay:0 "Patovay"
 
  kadapsuo_group:0 "Kadapsuo"
- kaypuk "Kaypuk"
+ kaypuk:0 "Kaypuk"
  dinehan:0 "Dinehan"
  kaliynao:0 "Kaliynao"
  koinama:0 "Koinama"
