--- a/localisation/leviathan_l_english.yml
+++ b/localisation/leviathan_l_english.yml
@@ -615,7 +615,7 @@
  polynesian_tribe_desc:1 "A Polynesian Tribe is the form of government where a leader manages to hold authority over a tribe or group of tribes but the nation does not act as a unified one."
  polynesian_kingdom:0 "Polynesian Kingdom"
  polynesian_kingdom_desc:1 "A Polynesian Kingdom is the form of government where a polynesian monarch manages to unite the usually competing tribes under their rule and act as a united nation."
- polynesian_tech:0 "Polynesian"
+ polynesian_tech:0 "Cakrawalunian"
  polynesian_tech_desc:1 "With the Polynesian technology group, technology levels are 100% more expensive (200%)."
  pacific_spearman:1 "Polynesian Spearmen"
  pacific_reformed_spearman:1 "Polynesian Reformed Spearmen"
