--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -326,7 +326,7 @@
  piedmontese:0 "Piedmontese"
  persian:0 "Persian"
  polish:0 "Polish"
- polynesian:0 "Polynesian"
+ polynesian:0 "Cakrawalunian"
  pommeranian:0 "Pomeranian"
  pontic_greek:0 "Pontic"
  portugese:0 "Portuguese"
