region + area loc

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -747,4 +747,19 @@
  alopahua_area:0 "Alopahua"
  pracdisa_area:0 "Pracdisa"
  dheiya_area:0 "Dheiya"
+
+ uripatu_area:0 "Uripatu"
+ posala_area:0 "Posala"
+ salita_area:0 "Salita"
+ ualule_area:0 "Ualule"
+ limaniu_area:0 "Limaniu"
+ oamai_area:0 "Oamai"
+ axuman_area:0 "Axuman"
+ ninihil_area:0 "Ninihil"
+ xixipul_area:0 "Xixipul"
+ pienu_area:0 "Pienu"
+ upuiro_area:0 "Upuiro"
+ buudae_area:0 "Buudae"
+ danada_area:0 "Danada"
+ hagalua_area:0 "Hagalua"
  
