--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -91,3 +91,4 @@
  toishima_tradenode:0 "Toishima"
  khemdan_tradenode:0 "Khemdan"
  pasmangala_tradenode:0 "Pasmangala"
+ akuariri_tradenode:0 "Akuariri"
