Deccani (tamil-based) prov names
Part 3 of naming not-indian provinces.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3496,16 +3496,16 @@
  PROV3495:0 "3495"
  PROV3496:0 "Pumgara"
  PROV3497:0 "3497"
- PROV3498:0 "3498"
+ PROV3498:0 "Kinvai"
  PROV3499:0 "Sonyochama"
  PROV3500:0 "3500"
  PROV3501:0 "3501"
- PROV3502:0 "3502"
+ PROV3502:0 "Kaykali"
  PROV3503:0 "3503"
- PROV3504:0 "3504"
- PROV3505:0 "3505"
- PROV3506:0 "3506"
- PROV3507:0 "3507"
+ PROV3504:0 "Malkati"
+ PROV3505:0 "Karacuppu"
+ PROV3506:0 "Perimutam"
+ PROV3507:0 "Karamalam"
  PROV3508:0 "Jadagara"
  PROV3509:0 "3509"
  PROV3510:0 "Brakipanha"
@@ -3676,7 +3676,7 @@
  PROV3675:0 "Pakmala"
  PROV3676:0 "Adhikespa"
  PROV3677:0 "3677"
- PROV3678:0 "3678"
+ PROV3678:0 "Magruali"
  PROV3679:0 "Sogitala"
  PROV3680:0 "Chkahasa"
  PROV3681:0 "Chagamala"
@@ -3689,55 +3689,55 @@
  PROV3688:0 "Larghapenat"
  PROV3689:0 "Gudenapa"
  PROV3690:0 "Chaghamega"
- PROV3691:0 "3691"
- PROV3692:0 "3692"
- PROV3693:0 "3693"
- PROV3694:0 "3694"
+ PROV3691:0 "Panpai"
+ PROV3692:0 "Teturan"
+ PROV3693:0 "Nikkeli"
+ PROV3694:0 "Porulu"
  PROV3695:0 "3695"
  PROV3696:0 "3696"
- PROV3697:0 "3697"
- PROV3698:0 "3698"
- PROV3699:0 "3699"
- PROV3700:0 "3700"
- PROV3701:0 "3701"
+ PROV3697:0 "Parapam"
+ PROV3698:0 "Batikeli"
+ PROV3699:0 "Wigimuru"
+ PROV3700:0 "Atakam"
+ PROV3701:0 "Nikaiam"
  PROV3702:0 "3702"
  PROV3703:0 "3703"
- PROV3704:0 "3704"
+ PROV3704:0 "Kappam"
  PROV3705:0 "3705"
  PROV3706:0 "3706"
- PROV3707:0 "3707"
+ PROV3707:0 "Parhali"
  PROV3708:0 "3708"
- PROV3709:0 "3709"
- PROV3710:0 "3710"
- PROV3711:0 "3711"
- PROV3712:0 "3712"
+ PROV3709:0 "Nogkuli"
+ PROV3710:0 "Agihiya"
+ PROV3711:0 "Tughili"
+ PROV3712:0 "Kugiual"
  PROV3713:0 "3713"
- PROV3714:0 "3714"
- PROV3715:0 "3715"
+ PROV3714:0 "Muganru"
+ PROV3715:0 "Orutakai"
  PROV3716:0 "3716"
- PROV3717:0 "3717"
- PROV3718:0 "3718"
- PROV3719:0 "3719"
- PROV3720:0 "3720"
- PROV3721:0 "3721"
- PROV3722:0 "3722"
- PROV3723:0 "3723"
- PROV3724:0 "3724"
+ PROV3717:0 "Guhankai"
+ PROV3718:0 "Moeruai"
+ PROV3719:0 "Vetgriya"
+ PROV3720:0 "Cigcpu"
+ PROV3721:0 "Kottgapi"
+ PROV3722:0 "Wegkalai"
+ PROV3723:0 "Paragu"
+ PROV3724:0 "Akerupi"
  PROV3725:0 "3725"
- PROV3726:0 "3726"
+ PROV3726:0 "Maratam"
  PROV3727:0 "3727"
  PROV3728:0 "3728"
  PROV3729:0 "Bhrikta"
  PROV3730:0 "Pradespa"
  PROV3731:0 "Kamarpas"
- PROV3732:0 "3732"
- PROV3733:0 "3733"
- PROV3734:0 "3734"
- PROV3735:0 "3735"
- PROV3736:0 "3736"
- PROV3737:0 "3737"
- PROV3738:0 "3738"
- PROV3739:0 "3739"
+ PROV3732:0 "Porupali"
+ PROV3733:0 "Cranali"
+ PROV3734:0 "Tinigali"
+ PROV3735:0 "Nagariali"
+ PROV3736:0 "Kanamu"
+ PROV3737:0 "Karikali"
+ PROV3738:0 "Vehupali"
+ PROV3739:0 "Culalvuli"
  PROV3740:0 "Komati"
  PROV3741:0 "Manaspa"
  PROV3742:0 "Dimati"
