--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2592,7 +2592,7 @@
  PROV2591:0 "2591"
  PROV2592:0 "2592"
  PROV2593:0 "2593"
- PROV2594:0 "2594"
+ PROV2594:0 "Heisean Sea"
  PROV2595:0 "2595"
  PROV2596:0 "2596"
  PROV2597:0 "Gongjag Strait"
@@ -3133,7 +3133,7 @@
  PROV3132:0 "Burkhamtal"
  PROV3133:0 "Gengshan"
  PROV3134:0 "3134"
- PROV3135:0 "3135"
+ PROV3135:0 "Dansan"
  PROV3136:0 "3136"
  PROV3137:0 "3137"
  PROV3138:0 "3138"
@@ -3272,30 +3272,30 @@
  PROV3271:0 "3271"
  PROV3272:0 "3272"
  PROV3273:0 "3273"
- PROV3274:0 "3274"
- PROV3275:0 "3275"
- PROV3276:0 "3276"
+ PROV3274:0 "Holansan"
+ PROV3275:0 "Holansan"
+ PROV3276:0 "Nalkaisan"
  PROV3277:0 "3277"
  PROV3278:0 "3278"
  PROV3279:0 "3279"
  PROV3280:0 "3280"
  PROV3281:0 "3281"
- PROV3282:0 "3282"
- PROV3283:0 "3283"
- PROV3284:0 "3284"
+ PROV3282:0 "Suiwol"
+ PROV3283:0 "Haendang"
+ PROV3284:0 "Guryedong"
  PROV3285:0 "3285"
- PROV3286:0 "3286"
+ PROV3286:0 "Geumbat"
  PROV3287:0 "Badagang"
- PROV3288:0 "3288"
- PROV3289:0 "3289"
- PROV3290:0 "3290"
- PROV3291:0 "3291"
- PROV3292:0 "3292"
- PROV3293:0 "3293"
- PROV3294:0 "3294"
- PROV3295:0 "3295"
- PROV3296:0 "3296"
- PROV3297:0 "3297"
+ PROV3288:0 "Seojong"
+ PROV3289:0 "Jiangeun"
+ PROV3290:0 "Kudong"
+ PROV3291:0 "Banjoung"
+ PROV3292:0 "Nopeunsup"
+ PROV3293:0 "Donggyegog"
+ PROV3294:0 "Yesudo"
+ PROV3295:0 "Eungang"
+ PROV3296:0 "Pagigeum"
+ PROV3297:0 "Keunseong"
  PROV3298:0 "3298"
  PROV3299:0 "3299"
  PROV3300:0 "3300"
@@ -3393,8 +3393,8 @@
  PROV3392:0 "Lamsheng"
  PROV3393:0 "Kwaashan"
  PROV3394:0 "Paksheng"
- PROV3395:0 "3395"
- PROV3396:0 "3396"
+ PROV3395:0 "Saelhang"
+ PROV3396:0 "Heomdan"
  PROV3397:0 "Yausheng"
  PROV3398:0 "Chahoi"
  PROV3399:0 "Laigan"
@@ -3403,7 +3403,7 @@
  PROV3402:0 "Faigun"
  PROV3403:0 "Hoiuen"
  PROV3404:0 "Shaantin"
- PROV3405:0 "3405"
+ PROV3405:0 "Daseong"
  PROV3406:0 "Naamshen"
  PROV3407:0 "Kwunpaai"
  PROV3408:0 "Tsaidun"
