--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3490,9 +3490,9 @@
  PROV3489:0 "3489"
  PROV3490:0 "3490"
  PROV3491:0 "3491"
- PROV3492:0 "3492"
+ PROV3492:0 "Budnayig"
  PROV3493:0 "3493"
- PROV3494:0 "3494"
+ PROV3494:0 "Budaug"
  PROV3495:0 "3495"
  PROV3496:0 "Pumgara"
  PROV3497:0 "3497"
@@ -3611,45 +3611,45 @@
  PROV3610:0 "3610"
  PROV3611:0 "3611"
  PROV3612:0 "3612"
- PROV3613:0 "3613"
- PROV3614:0 "3614"
+ PROV3613:0 "Badbag"
+ PROV3614:0 "Byumgbag"
  PROV3615:0 "3615"
- PROV3616:0 "3616"
+ PROV3616:0 "Mamugchis"
  PROV3617:0 "3617"
- PROV3618:0 "3618"
+ PROV3618:0 "Rotogpaing"
  PROV3619:0 "3619"
- PROV3620:0 "3620"
+ PROV3620:0 "Ragnyudzim"
  PROV3621:0 "3621"
  PROV3622:0 "3622"
  PROV3623:0 "3623"
  PROV3624:0 "3624"
- PROV3625:0 "3625"
+ PROV3625:0 "Guzhampag"
  PROV3626:0 "3626"
- PROV3627:0 "3627"
- PROV3628:0 "3628"
- PROV3629:0 "3629"
+ PROV3627:0 "Puhamtshug"
+ PROV3628:0 "Rungam"
+ PROV3629:0 "Becadag"
  PROV3630:0 "3630"
- PROV3631:0 "3631"
- PROV3632:0 "3632"
- PROV3633:0 "3633"
- PROV3634:0 "3634"
- PROV3635:0 "3635"
- PROV3636:0 "3636"
- PROV3637:0 "3637"
- PROV3638:0 "3638"
- PROV3639:0 "3639"
- PROV3640:0 "3640"
- PROV3641:0 "3641"
+ PROV3631:0 "Sikuugs"
+ PROV3632:0 "Madozesam"
+ PROV3633:0 "Basutomd"
+ PROV3634:0 "Kanbotag"
+ PROV3635:0 "Degonng"
+ PROV3636:0 "Gozung"
+ PROV3637:0 "Pranhor"
+ PROV3638:0 "Bosgarag"
+ PROV3639:0 "Jabashad"
+ PROV3640:0 "Manogbag"
+ PROV3641:0 "Busamgomtan"
  PROV3642:0 "3642"
  PROV3643:0 "3643"
- PROV3644:0 "3644"
- PROV3645:0 "3645"
+ PROV3644:0 "Yondungpa"
+ PROV3645:0 "Buskorga"
  PROV3646:0 "3646"
- PROV3647:0 "3647"
- PROV3648:0 "3648"
+ PROV3647:0 "Machodga"
+ PROV3648:0 "Sepyorags"
  PROV3649:0 "3649"
  PROV3650:0 "3650"
- PROV3651:0 "3651"
+ PROV3651:0 "Nagestash"
  PROV3652:0 "Khrota"
  PROV3653:0 "3653"
  PROV3654:0 "3654"
