Gujarati prov names
Part 5 of naming not-indian provinces.
Roll d20 to get mental help.
Natural 1.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3467,8 +3467,8 @@
  PROV3466:0 "3466"
  PROV3467:0 "3467"
  PROV3468:0 "3468"
- PROV3469:0 "3469"
- PROV3470:0 "3470"
+ PROV3469:0 "Dakara"
+ PROV3470:0 "Jhabhuuka"
  PROV3471:0 "3471"
  PROV3472:0 "3472"
  PROV3473:0 "3473"
@@ -3479,12 +3479,12 @@
  PROV3478:0 "3478"
  PROV3479:0 "3479"
  PROV3480:0 "3480"
- PROV3481:0 "3481"
+ PROV3481:0 "Dambeva"
  PROV3482:0 "3482"
  PROV3483:0 "3483"
  PROV3484:0 "3484"
  PROV3485:0 "3485"
- PROV3486:0 "3486"
+ PROV3486:0 "Garadvall"
  PROV3487:0 "3487"
  PROV3488:0 "3488"
  PROV3489:0 "3489"
@@ -3534,34 +3534,34 @@
  PROV3533:0 "3533"
  PROV3534:0 "3534"
  PROV3535:0 "3535"
- PROV3536:0 "3536"
- PROV3537:0 "3537"
- PROV3538:0 "3538"
- PROV3539:0 "3539"
+ PROV3536:0 "Savejena"
+ PROV3537:0 "Holofira"
+ PROV3538:0 "Darilena"
+ PROV3539:0 "Tresagada"
  PROV3540:0 "3540"
- PROV3541:0 "3541"
- PROV3542:0 "3542"
- PROV3543:0 "3543"
- PROV3544:0 "3544"
+ PROV3541:0 "Catavu"
+ PROV3542:0 "Agacaka"
+ PROV3543:0 "Jhaketa"
+ PROV3544:0 "Uchata"
  PROV3545:0 "3545"
- PROV3546:0 "3546"
+ PROV3546:0 "Kapathoja"
  PROV3547:0 "3547"
  PROV3548:0 "3548"
- PROV3549:0 "3549"
- PROV3550:0 "3550"
- PROV3551:0 "3551"
+ PROV3549:0 "Chedata"
+ PROV3550:0 "Ciraga"
+ PROV3551:0 "Khabhona"
  PROV3552:0 "3552"
  PROV3553:0 "3553"
  PROV3554:0 "3554"
- PROV3555:0 "3555"
- PROV3556:0 "3556"
- PROV3557:0 "3557"
- PROV3558:0 "3558"
+ PROV3555:0 "Ekelavana"
+ PROV3556:0 "Valevuta"
+ PROV3557:0 "Rogediiju"
+ PROV3558:0 "Bhrameke"
  PROV3559:0 "3559"
- PROV3560:0 "3560"
- PROV3561:0 "3561"
- PROV3562:0 "3562"
- PROV3563:0 "3563"
+ PROV3560:0 "Bhuugela"
+ PROV3561:0 "Gueru"
+ PROV3562:0 "Tobiimeba"
+ PROV3563:0 "Duueteka"
  PROV3564:0 "3564"
  PROV3565:0 "Gabhmata"
  PROV3566:0 "3566"
@@ -3598,7 +3598,7 @@
  PROV3597:0 "3597"
  PROV3598:0 "3598"
  PROV3599:0 "3599"
- PROV3600:0 "3600"
+ PROV3600:0 "Giidra"
  PROV3601:0 "3601"
  PROV3602:0 "3602"
  PROV3603:0 "3603"
