Nepalese prov names
Finale of naming not-indian provinces.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3476,8 +3476,8 @@
  PROV3475:0 "Tomgiri"
  PROV3476:0 "3476"
  PROV3477:0 "3477"
- PROV3478:0 "3478"
- PROV3479:0 "3479"
+ PROV3478:0 "Bakhlika"
+ PROV3479:0 "Bandagi"
  PROV3480:0 "Ksamatapa"
  PROV3481:0 "Dambeva"
  PROV3482:0 "Nehatika"
@@ -3585,15 +3585,15 @@
  PROV3584:0 "Pranda"
  PROV3585:0 "3585"
  PROV3586:0 "Pakaktra"
- PROV3587:0 "3587"
- PROV3588:0 "3588"
- PROV3589:0 "3589"
- PROV3590:0 "3590"
- PROV3591:0 "3591"
- PROV3592:0 "3592"
- PROV3593:0 "3593"
- PROV3594:0 "3594"
- PROV3595:0 "3595"
+ PROV3587:0 "Gandhasit"
+ PROV3588:0 "Aviccharnu"
+ PROV3589:0 "Myaurbha"
+ PROV3590:0 "Sandayang"
+ PROV3591:0 "Svatakta"
+ PROV3592:0 "Bhanukrau"
+ PROV3593:0 "Palayogi"
+ PROV3594:0 "Sahaunu"
+ PROV3595:0 "Tyacini"
  PROV3596:0 "Tycanda"
  PROV3597:0 "Upasjeri"
  PROV3598:0 "3598"
@@ -3619,10 +3619,10 @@
  PROV3618:0 "Rotogpaing"
  PROV3619:0 "3619"
  PROV3620:0 "Ragnyudzim"
- PROV3621:0 "3621"
- PROV3622:0 "3622"
+ PROV3621:0 "Dalttha"
+ PROV3622:0 "Cithanu"
  PROV3623:0 "3623"
- PROV3624:0 "3624"
+ PROV3624:0 "Bitabhava"
  PROV3625:0 "Guzhampag"
  PROV3626:0 "3626"
  PROV3627:0 "Puhamtshug"
