--- a/localisation/TD_01_flavour_eneratian_l_english.yml
+++ b/localisation/TD_01_flavour_eneratian_l_english.yml
@@ -81,3 +81,8 @@
  eneratian.9.desc:0 " "
  eneratian.9.a:0 "DEUS VULT!"
  eneratian.9.b:0 "This alliance is vital to survival of our country, we can't simply turn our backs on them now!"
+
+ empiree_eneratiane_reform:0 "Empiree Eneratiane"
+ empiree_eneratiane_reform_desc:0 "Following the legacy of the ancient Eneratian Empire, our state has abolished the elective monarchy of the Saelian Empire."
+ EMPREUR:0 "Empreur"
+ EMPREUR_PETITE:0 "Empreur Petit"
