--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -6198,7 +6198,7 @@
  RELIGIOUS_LEAGUE_WAR_NAME:0 "$ORDER$War of the $FIRST_RELIGION$ League"
  VASSAL_WAR_NAME:0 "$ORDER$$FIRST$-$SECOND$ Vassalization War"
  DOF_WAR_NAME:0 "$ORDER$$FIRST_RELIGION$ Defender War"
- HRE_DEFENSE_WAR_NAME:0 "$ORDER$Holy Roman Intervention"
+ HRE_DEFENSE_WAR_NAME:0 "$ORDER$Saelian Intervention"
  INTERVENTION_WAR_NAME:0 "$ORDER$$FIRST$ Intervention"
  INSULT_WAR_NAME:0 "$ORDER$$FIRST$-$SECOND$ War of Honor"
  THRONE_WAR_NAME:0 "$ORDER$$FIRST$ War for the $SECOND$ Throne"
