--- a/localisation/domination_l_english.yml
+++ b/localisation/domination_l_english.yml
@@ -2296,7 +2296,7 @@
  fiqh_laws_reform_desc:0 "Fiqh is the knowledge of the Islamic rulings from their sources. As such, the Fiqh Laws are the result of codifying the laws of the Quran into our very own legal code."
  sufism_decree_reform:0 "Sufism Decree"
  sufism_decree_reform_desc:0 "Sufism is a set of practices and a way of thinking focusing entirely on the spiritual and ritual nature of the Islam. Many of its traditions and influence have found their way into our own government."
- mechanic_same_religion_subject_bonus_yes:1 "Vassals, Marches and Eyalets which follow our religion gain §G+25.0%§! Manpower in True Faith, §G+25.0%§! Global Sailors Modifier and §G+15.0%§! Production Efficiency."
+ mechanic_same_religion_subject_bonus_yes:1 "Vassals and Marches which follow our religion gain §G+25.0%§! Manpower in True Faith, §G+25.0%§! Global Sailors Modifier and §G+15.0%§! Production Efficiency."
  mechanic_unlock_ottoman_holy_orders_yes:0 "Unlock the §YMevlevi§! Holy Order for §YSunni§! and §YIbadi§!\nUnlock the §YBektashi§! Holy Order for §YShia§! and §YIbadi§!"
  same_religion_subject_bonus_mod:0 "Fiqh Laws"
  war_economy_reform:0 "War Economy"
